# NebulaDuel

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
client/NebulaDuelGodot/: project.godot
client/NebulaDuelGodot/scenes/: LoginScene.tscn
client/NebulaDuelGodot/scripts/: LoginScene.gd  LoginScene.gd.uid  NetworkClient.gd  NetworkClient.gd.uid
docs/: nebula_duel_development_plan.md
server/: CMakeLists.txt
server/include/net/: Buffer.h  EventLoop.h  TcpConnection.h  TcpServer.h
server/include/protocol/: MessageDispatcher.h  MessageId.h  PacketCodec.h
server/proto/: common.proto  login.proto
server/scripts/: build.sh  gen_proto.sh  run_server.sh  test_packet_client.py
server/src/: main.cpp
server/src/net/: Buffer.cpp  EpollPoller.cpp  EpollPoller.h  EventLoop.cpp  EventLoop.h  TcpConnection.cpp  TcpServer.cpp
server/src/protocol/: MessageDispatcher.cpp  PacketCodec.cpp
server/tests/: PacketCodecTest.cpp
